--- a/test-output/index.html
+++ b/test-output/index.html
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Master_Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Master_Suite" title="testCases.TC006_SearchTest" class="method navigator-link" hash-for-method="verify_search">verify_search</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Master_Suite" title="testCases.TC012_AddAddressBook" class="method navigator-link" hash-for-method="verify_adding_address_book">verify_adding_address_book</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Master_Suite -->
@@ -122,14 +122,14 @@
           <div class="suite-Master_Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">testCases.TC006_SearchTest</span>
+              <span class="class-name">testCases.TC012_AddAddressBook</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verify_search">
-                  </a> <!-- verify_search -->
-                  <span class="method-name">verify_search</span>
+                  <a name="verify_adding_address_book">
+                  </a> <!-- verify_adding_address_book -->
+                  <span class="method-name">verify_adding_address_book</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -151,7 +151,7 @@
     &lt;parameter name=&quot;os&quot; value=&quot;Windows&quot;/&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testCases.TC006_SearchTest&quot;/&gt;
+      &lt;class name=&quot;testCases.TC012_AddAddressBook&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Master Suite --&gt;
@@ -179,7 +179,7 @@
               <span class="test-group-name">Master</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">verify_search</span>
+                <span class="method-in-group-name">verify_adding_address_book</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -187,7 +187,7 @@
               <span class="test-group-name">Regression</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">verify_search</span>
+                <span class="method-in-group-name">verify_adding_address_book</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -209,14 +209,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'verify_search')
-data.setCell(0, 2, 'testCases.TC006_SearchTest')
-data.setCell(0, 3, 909);
+data.setCell(0, 1, 'verify_adding_address_book')
+data.setCell(0, 2, 'testCases.TC012_AddAddressBook')
+data.setCell(0, 3, 5438);
 window.suiteTableData['Master_Suite']= { tableData: data, tableDiv: 'times-div-Master_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 909 ms</span>
+              <span class="suite-total-time">Total running time: 5 seconds</span>
               <div id="times-div-Master_Suite">
               </div> <!-- times-div-Master_Suite -->
             </div> <!-- times-div -->
@@ -242,18 +242,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">testCases.TC006_SearchTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">testCases.TC012_AddAddressBook</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">setup(Windows, chrome)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">verify_search</span>
-                <span class="method-start">7352 ms</span>
+                <span class="method-name">verify_adding_address_book</span>
+                <span class="method-start">13072 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">8275 ms</span>
+                <span class="method-start">18528 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
