--- a/test-output/old/Master Suite/classes.html
+++ b/test-output/old/Master Suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testCases.TC006_SearchTest</td>
+<td>testCases.TC012_AddAddressBook</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verify_search</td>
+<td>verify_adding_address_book</td>
 <td>Master Regression </td>
 </tr>
 <tr>
