--- a/test-output/old/Master Suite/groups.html
+++ b/test-output/old/Master Suite/groups.html
@@ -1,4 +1,4 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Master</td><td>TC006_SearchTest.verify_search()[pri:0, instance:testCases.TC006_SearchTest@223191a6]<br/></td></tr>
-<tr><td>Regression</td><td>TC006_SearchTest.verify_search()[pri:0, instance:testCases.TC006_SearchTest@223191a6]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Master</td><td>TC012_AddAddressBook.verify_adding_address_book()[pri:0, instance:testCases.TC012_AddAddressBook@1a482e36]<br/></td></tr>
+<tr><td>Regression</td><td>TC012_AddAddressBook.verify_adding_address_book()[pri:0, instance:testCases.TC012_AddAddressBook@1a482e36]<br/></td></tr>
 </table>
