--- a/test-output/old/Master Suite/methods.html
+++ b/test-output/old/Master Suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Master Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7677d1">  <td>24/07/26 20:59:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:testCases.TC006_SearchTest@223191a6]">&lt;&lt;tearDown</td> 
+<tr bgcolor="616382">  <td>24/08/16 15:37:56</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:testCases.TC012_AddAddressBook@1a482e36]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@925858445</td>   <td></td> </tr>
-<tr bgcolor="7677d1">  <td>24/07/26 20:58:57</td>   <td>-8269</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String,java.lang.String)[pri:0, instance:testCases.TC006_SearchTest@223191a6]">&gt;&gt;setup</td> 
+<tr bgcolor="616382">  <td>24/08/16 15:37:38</td>   <td>-18521</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String,java.lang.String)[pri:0, instance:testCases.TC012_AddAddressBook@1a482e36]">&gt;&gt;setup</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@925858445</td>   <td></td> </tr>
-<tr bgcolor="91d69f">  <td>24/07/26 20:59:05</td>   <td>-924</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC006_SearchTest.verify_search()[pri:0, instance:testCases.TC006_SearchTest@223191a6]">verify_search</td> 
+<tr bgcolor="76e6b0">  <td>24/08/16 15:37:51</td>   <td>-5456</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC012_AddAddressBook.verify_adding_address_book()[pri:0, instance:testCases.TC012_AddAddressBook@1a482e36]">verify_adding_address_book</td> 
   <td>main@925858445</td>   <td></td> </tr>
 </table>
