--- a/test-output/old/Master Suite/classes.html
+++ b/test-output/old/Master Suite/classes.html
@@ -4,15 +4,15 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testCases.TC012_AddAddressBook</td>
+<td>testCases.TC013_InformationTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verify_adding_address_book</td>
-<td>Master Regression </td>
+<td>verify_about_us_information_section</td>
+<td>Master </td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
