--- a/test-output/old/Master Suite/classes.html
+++ b/test-output/old/Master Suite/classes.html
@@ -4,14 +4,47 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testCases.TC013_InformationTest</td>
+<td>testCases.TC015_BrandsProductsDisplay</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verify_about_us_information_section</td>
+<td>verify_displaying_sony_products</td>
+<td>Master </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>setup</td>
+<td>Master Sanity Regression </td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>tearDown</td>
+<td>Master Sanity Regression </td>
+</tr>
+<tr>
+<td>testCases.TC014_ReturningOrderTest</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>verify_returning_an_order</td>
 <td>Master </td>
 </tr>
 <tr>
