--- a/test-output/old/Master Suite/groups.html
+++ b/test-output/old/Master Suite/groups.html
@@ -1,3 +1,3 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Master</td><td>TC013_InformationTest.verify_about_us_information_section()[pri:0, instance:testCases.TC013_InformationTest@1a482e36]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Master</td><td>TC014_ReturningOrderTest.verify_returning_an_order()[pri:0, instance:testCases.TC014_ReturningOrderTest@5b8dfcc1]<br/>TC015_BrandsProductsDisplay.verify_displaying_sony_products()[pri:0, instance:testCases.TC015_BrandsProductsDisplay@130d63be]<br/></td></tr>
 </table>
