--- a/test-output/old/Master Suite/methods-alphabetical.html
+++ b/test-output/old/Master Suite/methods-alphabetical.html
@@ -1,10 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Master Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="616382">  <td>24/08/19 00:45:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String,java.lang.String)[pri:0, instance:testCases.TC013_InformationTest@1a482e36]">&gt;&gt;setup</td> 
+<tr bgcolor="808ef9">  <td>24/08/25 23:16:41</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String,java.lang.String)[pri:0, instance:testCases.TC014_ReturningOrderTest@5b8dfcc1]">&gt;&gt;setup</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@925858445</td>   <td></td> </tr>
-<tr bgcolor="616382">  <td>24/08/19 00:45:18</td>   <td>7099</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:testCases.TC013_InformationTest@1a482e36]">&lt;&lt;tearDown</td> 
+<tr bgcolor="808ef9">  <td>24/08/25 23:16:59</td>   <td>18101</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String,java.lang.String)[pri:0, instance:testCases.TC015_BrandsProductsDisplay@130d63be]">&gt;&gt;setup</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@925858445</td>   <td></td> </tr>
-<tr bgcolor="76e6b0">  <td>24/08/19 00:45:18</td>   <td>6555</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC013_InformationTest.verify_about_us_information_section()[pri:0, instance:testCases.TC013_InformationTest@1a482e36]">verify_about_us_information_section</td> 
+<tr bgcolor="808ef9">  <td>24/08/25 23:17:06</td>   <td>25553</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:testCases.TC015_BrandsProductsDisplay@130d63be]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@925858445</td>   <td></td> </tr>
+<tr bgcolor="808ef9">  <td>24/08/25 23:16:59</td>   <td>17918</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:testCases.TC014_ReturningOrderTest@5b8dfcc1]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@925858445</td>   <td></td> </tr>
+<tr bgcolor="93938a">  <td>24/08/25 23:17:05</td>   <td>24394</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC015_BrandsProductsDisplay.verify_displaying_sony_products()[pri:0, instance:testCases.TC015_BrandsProductsDisplay@130d63be]">verify_displaying_sony_products</td> 
+  <td>main@925858445</td>   <td></td> </tr>
+<tr bgcolor="76e6b0">  <td>24/08/25 23:16:56</td>   <td>15036</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC014_ReturningOrderTest.verify_returning_an_order()[pri:0, instance:testCases.TC014_ReturningOrderTest@5b8dfcc1]">verify_returning_an_order</td> 
   <td>main@925858445</td>   <td></td> </tr>
 </table>
